Type mismatch in xmlschemastypes.c

For https://bugzilla.gnome.org/show_bug.cgi?id=715152